tests/golden/type_errors/array_reduce_non_function.cd
reduce([1], 0, 42);
