tests/golden/type_errors/array_reduce_non_function.err
Type error at 1:18: reduce expects function as third argument, got number
  reduce([1], 0, 42);
                   ^
